--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "private": true,
   "dependencies": {
-    "irc": "~0.3.12"
+    "irc": "~0.3.12",
+    "irc-colors": "^1.2.1"
   },
   "devDependencies": {},
   "scripts": {
